--- a/package.json
+++ b/package.json
@@ -22,19 +22,20 @@
     "body-parser": "^1.16.0",
     "connect-mongo": "^1.3.2",
     "css-loader": "^0.26.1",
-    "express": "^4.14.0",
-    "express-graphql": "0.6.1",
-    "express-session": "^1.15.0",
-    "graphql": "^0.8.2",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "express-session": "^1.17.3",
+    "graphql": "^16.6.0",
     "html-webpack-plugin": "^2.26.0",
     "lodash": "^4.17.4",
-    "mongoose": "^4.7.8",
+    "mongoose": "^6.7.1",
+    "nodemon": "^2.0.20",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "react": "^15.4.2",
+    "react": "^18.2.0",
     "react-apollo": "^0.9.0",
-    "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0"
