--- a/package.json
+++ b/package.json
@@ -13,31 +13,35 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "apollo-client": "^0.8.1",
-    "axios": "^0.15.3",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-react": "^6.22.0",
-    "body-parser": "^1.16.0",
-    "connect-mongo": "^1.3.2",
-    "css-loader": "^0.26.1",
+    "axios": "^1.1.3",
+    "babel-loader": "^9.1.0",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-react-transform": "^3.0.0",
+    "body-parser": "^1.20.1",
+    "connect-mongo": "^4.6.0",
+    "css-loader": "^6.7.1",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.3",
     "graphql": "^16.6.0",
-    "html-webpack-plugin": "^2.26.0",
-    "lodash": "^4.17.4",
+    "html-webpack-plugin": "^5.5.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.7.1",
     "nodemon": "^2.0.20",
-    "passport": "^0.3.2",
+    "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-apollo": "^0.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.2.0",
-    "webpack-dev-middleware": "^1.9.0"
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-dev-middleware": "^5.3.3"
   }
 }
