--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "apollo-client": "^0.8.1",
     "axios": "^1.1.3",
     "babel-loader": "^9.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-transform": "^3.0.0",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.20.1",
     "connect-mongo": "^4.6.0",
     "css-loader": "^6.7.1",
