--- a/package.json
+++ b/package.json
@@ -30,16 +30,18 @@
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.3",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "html-webpack-plugin": "^5.5.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-apollo": "^0.9.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.4",
+    "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-dev-middleware": "^5.3.3"
